_sass/universal.scss
//Colors
$yellow: #FAF076;
$green: #49927C;
$blue: #02509E;

//Fonts
$general: 'Montserrat', sans-serif;
$happy: 'Henny-Penny';

@font-face {
  font-family: 'Henny-Penny';
  src: url("/crdc/assets/fonts/HennyPenny-Regular.woff");
}
* {
  box-sizing: border-box;
  font: 100% $general;
  color: $yellow;
}
body {
  position: relative;
  height: 0;
  min-height: 829px;
  background-size: cover;
  background-repeat: no-repeat;
  margin: 0;
  object-fit: scale-down;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.page-wrap {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex: 1 0 auto;
  > * {
    flex-shrink: 0;
  }
}
.content {
  width: 100%;
  display: flex;
  flex-direction: column;
  // justify-content: center;
  flex: 1 0 auto;
  justify-content: center;
}
h1 {
  font-weight: 900;
  font-size: 26px;
}
h1.center-title {
  text-align: center;
}
h2{
  font-size: 20px;
  font-weight: bolder;
}
h3 {
  font-weight: 900;
  font-size: 16px;
}
h4 {
  font-size: 12px;
}
a{
  color: $yellow;
  text-decoration: none;
  :hover, :focus {
    color: $yellow !important;
    text-decoration: none !important;
  }
}
li {
  list-style-position: inside;
}
strong {
  font-weight: bold;
}
a.cc-button {
  color: $green !important;
}
html, body {
  margin: 0;
}
html {
  height: 100%;
}
// body {
//   min-height: 100%;
// }
body.default-background {
  display: flex;
  flex-direction: column;
  background:    linear-gradient(
      rgba(73, 146, 124, 0.7),
      rgba(73, 146, 124, 0.7)
      ),
      url("/crdc/assets/images/Backround-default.jpg");
  background-size: cover;
  min-height: 100%;
}
.fas {
  font-size: 2rem;
}
.block {
  display: block;
}
.cta > a {
  color: $yellow;
  font-weight: bold;
  text-decoration: none;
}
.cta {
 background-image: linear-gradient(155deg, $blue 7%, $green 57%, $yellow 100%);
 border: 3px solid $yellow;
 border-radius: 0.5rem;
 font-family: Montserrat-Bold;
 font-size: 15px;
 text-align: center;
 padding: 0.5rem 1.2rem;
 text-transform: uppercase;
 white-space: nowrap;
}
div.footer {
  text-align: right;
  margin-right: 2rem;
}
a.footer {
  margin-bottom: 0.5rem;
  font-size: 10px;
}
a.footer:hover {
  color: $yellow !important;
}
.logo-small {
  width: 4rem;
}

